(Add) Login Page

--- a/frontend/src/styles/pages/_mainpage.scss
+++ b/frontend/src/styles/pages/_mainpage.scss
@@ -20,18 +20,23 @@
     }
   }
 
-  .wave {
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    left: 0;
-    --mask: radial-gradient(176.14px at 50% 245px, #000 99%, #0000 101%)
-        calc(50% - 200px) 0/400px 100%,
-      radial-gradient(176.14px at 50% -145px, #0000 99%, #000 101%) 50% 100px/400px
-        100% repeat-x;
-    -webkit-mask: var(--mask);
-    mask: var(--mask);
+  &__content {
+    position: relative;
+    .wave {
+        position: absolute;
+        width: 100%;
+        height: 50%;
+        left: 0;
+        --mask: radial-gradient(176.14px at 50% 245px, #000 99%, #0000 101%)
+            calc(50% - 200px) 0/400px 100%,
+          radial-gradient(176.14px at 50% -145px, #0000 99%, #000 101%) 50% 100px/400px
+            100% repeat-x;
+        -webkit-mask: var(--mask);
+        mask: var(--mask);
+      }
   }
+
+  
 
   &__principalwave {
     background-color: map-get($backgroundColors, "secondary");
