--- a/frontend/src/styles/base/_variables.scss
+++ b/frontend/src/styles/base/_variables.scss
@@ -1,4 +1,26 @@
 // Colors
-$textColors: ("primary": #fff, "secondary": #000, "tertiary": #f3e305, "links": #FFF6B3);
-$backgroundColors: ("primary": #3F84B8, "secondary": #6A80B9, "buttons": #F5A752, "decoration": #F6C794);
-$emotions: ("joyfull": #FFDB12, "happy": #FCFC6E, "neutral": #F8BE67, "sad": #FF9C31, "angry": #D75F59);
+$textColors: (
+  "primary": #fff,
+  "secondary": #000,
+  "tertiary": #f3e305,
+  "links": #fff6b3,
+);
+$backgroundColors: (
+  "primary": #3f84b8,
+  "secondary": #6a80b9,
+  "buttons": #f5a752,
+  "decoration": #f6c794,
+);
+$emotions: (
+  "joyful": #ffdb12,
+  "happy": #fcfc6e,
+  "neutral": #f8be67,
+  "sad": #ff9c31,
+  "angry": #d75f59,
+);
+
+:root {
+  @each $key, $value in $emotions {
+    --color-#{$key}: #{$value};
+  }
+}
