--- a/frontend/src/styles/pages/_mainpage.scss
+++ b/frontend/src/styles/pages/_mainpage.scss
@@ -21,22 +21,63 @@
   }
 
   &__content {
-    position: relative;
-    .wave {
-        position: absolute;
-        width: 100%;
-        height: 50%;
-        left: 0;
-        --mask: radial-gradient(176.14px at 50% 245px, #000 99%, #0000 101%)
-            calc(50% - 200px) 0/400px 100%,
-          radial-gradient(176.14px at 50% -145px, #0000 99%, #000 101%) 50% 100px/400px
-            100% repeat-x;
-        -webkit-mask: var(--mask);
-        mask: var(--mask);
-      }
+    position: absolute;
+    z-index: 2;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @include flex(column);
+    width: 100%;
+    height: auto;
+
+    &--slider {
+      -webkit-appearance: none;
+      margin-bottom: 50px;
+    }
+
+    &--slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: #000;
+      cursor: pointer;
+    }
+
+    // Slider colors
+    .slider-joyful {
+      background: map-get($emotions, "joyful");
+    }
+
+    .slider-happy {
+      background: map-get($emotions, "happy");
+    }
+
+    .slider-neutral {
+      background: map-get($emotions, "neutral");
+    }
+
+    .slider-sad {
+      background: map-get($emotions, "sad");
+    }
+
+    .slider-angry {
+      background: map-get($emotions, "angry");
+    }
   }
 
-  
+  .wave {
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    left: 0;
+    --mask: radial-gradient(176.14px at 50% 245px, #000 99%, #0000 101%)
+        calc(50% - 200px) 0/400px 100%,
+      radial-gradient(176.14px at 50% -145px, #0000 99%, #000 101%) 50% 100px/400px
+        100% repeat-x;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
+  }
 
   &__principalwave {
     background-color: map-get($backgroundColors, "secondary");
