--- a/frontend/src/styles/pages/_loginpage.scss
+++ b/frontend/src/styles/pages/_loginpage.scss
@@ -4,42 +4,48 @@
     height: 100vh;
     overflow: hidden;
 
+
     &__container {
-        display: flex;
-        flex-direction: column;
+    @include flex(column);
+        margin-top: 30%;
         align-items: center;
-        justify-content: center;
+        justify-content: center; 
+        z-index: 2;
 
-        &--image {
-            width: 50%;
-            height: 50%;
-            object-fit: cover;
-            margin-top: 20px;
-        }
-
-        
+    &--image {
+      width: 50%;
+      height: 50%;
+      object-fit: cover;
+      margin-top:20%;
     }
-
-    .wave {
-        position: absolute;
-        width: 100%;
-        height: 35%;
-        left: 0;
-        --mask:
-            radial-gradient(180.28px at 50% calc(100% - 250px), #000 99%, #0000 101%) calc(50% - 200px) 0/400px 100%,
-            radial-gradient(180.28px at 50% calc(100% + 150px), #0000 99%, #000 101%) 50% calc(100% - 100px)/400px 100% repeat-x;
-        -webkit-mask: var(--mask);
-        mask: var(--mask);
-    }
-
-    &__principalwave {
+  }
+  
+        .wave {
+            position: absolute;
+            width: 100%;
+            height: 35%;
+            left: 0;
+            --mask:
+             radial-gradient(180.28px at 50% calc(100% - 250px),#000 99%,#0000 101%) calc(50% - 200px) 0/400px 100%,
+            radial-gradient(180.28px at 50% calc(100% + 150px),#0000 99%,#000 101%) 50% calc(100% - 100px)/400px 100% repeat-x;
+            -webkit-mask: var(--mask);
+             mask: var(--mask);  
+             
+          }
+      
+    
+      
+    
+      &__principalwave {
         background-color: map-get($backgroundColors, "secondary");
         top: 0;
-        z-index: 1;
-    }
-
-    &__secondarywave {
+        z-index: -1;
+      }
+    
+      &__secondarywave {
         background-color: map-get($backgroundColors, "decoration");
-        top: 15%;
-    }
-}
+        top:10%;
+        z-index: -2;
+      }
+  }
+  
