--- a/frontend/src/styles/pages/_loginpage.scss
+++ b/frontend/src/styles/pages/_loginpage.scss
@@ -3,49 +3,129 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 
     &__container {
-    @include flex(column);
-        margin-top: 30%;
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center; 
+        justify-content: center;
         z-index: 2;
+        margin-top: 20px;
 
-    &--image {
-      width: 50%;
-      height: 50%;
-      object-fit: cover;
-      margin-top:20%;
+        &--image {
+            width: 80%;
+            height: auto;
+            object-fit: cover;
+            margin-top: 20px;
+        }
     }
-  }
+
+    .loginpageForm {
+        width: 100%;
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;      
   
-        .wave {
-            position: absolute;
+        h1 {
+            margin-bottom: 10%;
+        }
+
+        label {
+            width: 100%;          
+        }
+
+        input {
+            margin-top:-5%;
             width: 100%;
-            height: 35%;
-            left: 0;
-            --mask:
-             radial-gradient(180.28px at 50% calc(100% - 250px),#000 99%,#0000 101%) calc(50% - 200px) 0/400px 100%,
-            radial-gradient(180.28px at 50% calc(100% + 150px),#0000 99%,#000 101%) 50% calc(100% - 100px)/400px 100% repeat-x;
-            -webkit-mask: var(--mask);
-             mask: var(--mask);  
-             
-          }
-      
-    
-      
-    
-      &__principalwave {
-        background-color: map-get($backgroundColors, "secondary");
-        top: 0;
-        z-index: -1;
+            background: none;
+            padding: 10px;           
+            border-bottom: 1px solid #ccc;
+            border-radius: 8px;
+        }
+
+        a {
+            color: #ffffff;
+            text-decoration: none;
+            
+        }
+
+        .btnLogin {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            button {
+                width:90%;
+                padding: 10px;
+                background:rgba(245, 167, 82, 1);
+                color: #fff;
+                border: none;
+                border-radius: 10px;
+               
+            }
+
+            a {
+                color: #ffffff;
+                text-decoration: none;
+            }
+        }
+    }
+
+    .wave {
+        position: absolute;
+        width: 100%;
+        height: 25%;
+        left: 0;
+        --mask:
+         radial-gradient(180.28px at 50% calc(100% - 250px),#000 99%,#0000 101%) calc(50% - 200px) 0/400px 100%,
+        radial-gradient(180.28px at 50% calc(100% + 150px),#0000 99%,#000 101%) 50% calc(100% - 100px)/400px 100% repeat-x;
+        -webkit-mask: var(--mask);
+         mask: var(--mask);  
+         
       }
-    
-      &__secondarywave {
-        background-color: map-get($backgroundColors, "decoration");
-        top:10%;
-        z-index: -2;
-      }
-  }
   
+
+  
+
+  &__principalwave {
+    background-color: map-get($backgroundColors, "secondary");
+    top: 0;
+    z-index: -1;
+  }
+
+  &__secondarywave {
+    background-color: map-get($backgroundColors, "decoration");
+    top:10%;
+    z-index: -2;
+  }
+
+  &__huevito {
+    position: absolute;
+    width:7%; // Ajusta el tamaño según sea necesario
+    height:5% ; // Ajusta el tamaño según sea necesario
+    background-color: #fff;
+    border: 2px solid #ccc;
+    border-radius: 50% 50% 45% 45%; // Forma de huevo
+    z-index: 0;
+}
+
+&__huevito1 {
+    top: 30%;
+    left: 7%;
+}
+
+&__huevito2 {
+    top: 80%;
+    right: 10%;
+}
+ 
+
+
+}
