--- a/frontend/src/styles/pages/_mainpage.scss
+++ b/frontend/src/styles/pages/_mainpage.scss
@@ -23,7 +23,7 @@
   &__content {
     position: absolute;
     z-index: 2;
-    top: 65%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     @include flex(column);
@@ -32,16 +32,56 @@
 
     &--slider {
       -webkit-appearance: none;
-      margin-bottom: 50px;
-    }
+      width: 80%;
+      height: 10px;
+      border-radius: 5px;
+      background: #ddd;
+      outline: none;
+      margin: 15px 0;
+      transition: background 0.3s ease;
 
-    &--slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background: #000;
-      cursor: pointer;
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #000;
+        cursor: pointer;
+        transition: background 0.3s ease, transform 0.3s ease;
+      }
+
+      &::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #000;
+        cursor: pointer;
+        transition: background 0.3s ease, transform 0.3s ease;
+      }
+
+      &::-ms-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #000;
+        cursor: pointer;
+        transition: background 0.3s ease, transform 0.3s ease;
+      }
+
+      &:hover::-webkit-slider-thumb {
+        background: #333;
+        transform: scale(1.2);
+      }
+
+      &:hover::-moz-range-thumb {
+        background: #333;
+        transform: scale(1.2);
+      }
+
+      &:hover::-ms-thumb {
+        background: #333;
+        transform: scale(1.2);
+      }
     }
 
     // Slider colors
@@ -69,7 +109,7 @@
   .wave {
     position: absolute;
     width: 100%;
-    height: 50%;
+    height: 65%;
     left: 0;
     --mask: radial-gradient(176.14px at 50% 245px, #000 99%, #0000 101%)
         calc(50% - 200px) 0/400px 100%,
@@ -87,6 +127,6 @@
 
   &__secondarywave {
     background-color: map-get($backgroundColors, "decoration");
-    bottom: 15%;
+    bottom: 5%;
   }
 }
