(Add) Tracker styles

--- a/frontend/src/styles/base/_variables.scss
+++ b/frontend/src/styles/base/_variables.scss
@@ -10,6 +10,8 @@ $backgroundColors: (
   "secondary": #6a80b9,
   "buttons": #f5a752,
   "decoration": #f6c794,
+  "tracker": #d5baea,
+  "checkbox": #5d199a,
 );
 $emotions: (
   "joyful": #ffdb12,
@@ -18,5 +20,3 @@ $emotions: (
   "sad": #ff9c31,
   "angry": #d75f59,
 );
-
-
